--- a/site-lutece/webapp/WEB-INF/conf/db.properties
+++ b/site-lutece/webapp/WEB-INF/conf/db.properties
@@ -9,7 +9,7 @@
 #portal.poolservice is not a mandatory property
 portal.poolservice=fr.paris.lutece.util.pool.service.LuteceConnectionService
 portal.driver=com.mysql.cj.jdbc.Driver
-portal.url=jdbc:mysql://localhost:3306/lutece_db?autoReconnect=true&useUnicode=yes&characterEncoding=utf8
+portal.url=jdbc:mysql://db_lutece_site/lutece_db?autoReconnect=true&useUnicode=yes&characterEncoding=utf8
 portal.user=root
 portal.password=root
 portal.initconns=2
